# arg-invoice-parser

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  core.py  docker-compose.yml  main.py  pyproject.toml  run-batch.py
api/: dtos.py  main.py
cli/: __init__.py  batch.py  parse.py  run_api.py
dtos/: __init__.py  models.py
parsers/: __init__.py  ai_parser.py  orchestrator.py  qr_parser.py  regex_parser.py
services/: __init__.py  data_extraction_service.py  ocr_service.py
tests/: test_regex_parser.py
use_cases/: __init__.py  parse_invoice_use_case.py
utils/: __init__.py  core.py
