[project]
name = "ocr-facturas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "pyzbar>=0.1.9",
]

[tool.pytest]
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[project.scripts]
invoice-parser = "main:main"
