[project]
name = "ocr-facturas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "pyzbar>=0.1.9",
]

[tool.pytest]
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "cli*", "dtos*", "parsers*", "services*", "use_cases*", "utils*"]
exclude = ["tests*", "facturas*", "output*", "__pycache__*"]

[project.scripts]
invoice-parse = "cli.parse:main"
invoice-batch = "cli.batch:main"
invoice-api = "cli.run_api:main"
